; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/user/rtl/extr_text.c__font_assert.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/user/rtl/extr_text.c__font_assert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [36 x i8] c"Assertion failed at %s line %d: %s\0A\00", align 1
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_font_assert(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i8*, i8** %5, align 8
  %8 = load i32, i32* %6, align 4
  %9 = load i8*, i8** %4, align 8
  %10 = call i32 @DbgPrint(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i8* %7, i32 %8, i8* %9)
  %11 = call i32 @ExitProcess(i32 3)
  br label %12

12:                                               ; preds = %12, %3
  br label %12
}

declare dso_local i32 @DbgPrint(i8*, i8*, i32, i8*) #1

declare dso_local i32 @ExitProcess(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
